--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <h3> Facebook:- <span><a href="https://www.facebook.com/100ravpatel">click for visit</a></span></h3>
             <h3> Twitter:- <span><a href="https://twitter.com/100ravpatel">click for visit</a></span></h3>
             <h3> Linkedin:- <span><a href="https://www.linkedin.com/in/100ravpatel/">click for visit</a></span></h3>
+            <h3> Youtube:- <span><a href="https://www.youtube.com/channel/UCeQoFegGvr6yLRtnDUPZ7PQ/featured?view_as=subscriber">click for visit</a></span></h3>
               
         </div>
     </div>
