--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>My Portfollio</title>
     <link rel="stylesheet" href="style.css"></link>
 </head>
 <body>
-    <h1 class="name"> Saurav Patel </h1>
     <div class="maindiv">
          <div class="images"> 
             <div class="image-container fade">
